# SPH-EXA

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CHANGELOG  CMakeCache.txt  CMakeLists.txt  LFS-README  LICENSE  Makefile  Makefile.cscs  README-DAINT.txt  README.ci  README.hdf5  README.insitu  README.md  README_adios.md  README_ci.md  README_insitu.md  TODO  bitbucket-pipelines.yml  build.sh  check.sh  compilers.md  constants.py  debug_build.sh  diff_output.py  mk.sh  parse_dat_file.py  perf.sh  plot.py  profile.sh  pyproject.toml  rn.sh  run.sh
Cooling/: CMakeLists.txt
Cooling/include/: cooling.hpp
Cooling/test/: CMakeLists.txt  cooling_test.cpp
domain/: .clang-format  .clang-tidy  CMakeLists.txt  README.md
domain/cmake/: cstone_add_performance_test.cmake  cstone_add_test.cmake  setup_GTest.cmake
domain/include/: CMakeLists.txt
domain/include/cstone/: CMakeLists.txt  box.hpp  box_mpi.hpp  boxoverlap.hpp  bsearch.hpp  clz.hpp  collisions_cpu.hpp  domain.hpp  domaindecomp.hpp  domaindecomp_mpi.hpp  findneighbors.hpp  fnmod.hpp  halodiscovery.hpp  mortoncode.hpp  mortonconversions.hpp  octree.hpp  octree_mpi.hpp  octree_util.hpp  scan.hpp  zorder.hpp
domain/test/: CMakeLists.txt  CMakeLists.txt.in
domain/test/collision_reference/: CMakeLists.txt  collisions_a2a.cpp  collisions_a2a.hpp
main/: CMakeLists.txt
main/cmake/: FindFFTW.cmake
main/src/: CMakeLists.txt  ascent_adaptor copy.h  ascent_adaptor.h  catalyst_adaptor.h  insitu_viz.h  version.h.in
main/test/: CMakeLists.txt
physics/cooling/: CMakeLists.txt
ryoanji/: CMakeLists.txt  buildtree.h  cudavec.h  serial.cu  serial_cs.cu  thrust.cu  traversal.h  types.h  unroll.h  vec.h  warpscan.h
ryoanji/cmake/: ryoanji_add_test.cmake  setup_GTest.cmake
ryoanji/src/: CMakeLists.txt
ryoanji/test/: CMakeLists.txt  buildtree.cu  buildtree_cs.cu  dataset.hpp  demo.cu  demo_mpi.cpp  direct.cu  grouptargets.cu  multi_rank.cpp  multipole.cu  multipole_holder.cu  treebuilder.cu  warpscan.cu
sph/: CMakeLists.txt
sph/include/: CMakeLists.txt  pinned_allocator.h  sphexa.hpp
sph/test/: CMakeLists.txt  block_dt.cu  example_data.txt  positions.cpp  std.cpp  table_creation.cpp  timestep.cu  ve.cpp
src/: AscentAdaptor.h  BBox.hpp  CMakeLists.txt  CatalystAdaptor.h  ComputeParticleTask.hpp  ComputeTask.hpp  Dataset.hpp  DatasetSquarePatch.hpp  Density.hpp  EOS.hpp  Energy.hpp  EquationOfStateSquarePatch.hpp  Evrard.hpp  H.hpp  Model.hpp  Momentum.hpp  MomentumSquarePatch.hpp  Octree.cpp  Octree.hpp  Particle.hpp  Scheduler.hpp  Simulation.cpp  Simulation.hpp  SqPatch.hpp  SqPatchDataGenerator.hpp  Task.hpp  TaskLoop.hpp  TaskScheduler.hpp  Timestep.hpp  Tree.cpp  Tree.hpp  Types.hpp  UpdateQuantities.hpp  ascent_adaptor.h  common.hpp  debug.hpp  distmain.cpp  evrard.cpp  input_converter.cpp  insitu_viz.h  (+10 more)
src/Octree/: Makefile
src/Octree1/: octree_main.cpp
src/Octree2/: Boundingbox.cpp  Boundingbox.hpp  Octree.hpp  boundingbox.cc  boundingbox.h  main.cc  octree.h  octree.x  point3d.cc  point3d.h
src/Octree3/: OctTree.h
src/Octree4/: LocalTree.hpp  Map.hpp  Octant.hpp  ParTree.cpp  ParTreeUniform.cpp
src/OctreeTest/: CMakeLists.txt  Octree.cpp  Octree.hpp
src/analyticalSolutions/: CMakeLists.txt  compare_solution.py  compare_solutions.py
src/analytical_solutions/: CMakeLists.txt  compare_noh.py  compare_solutions.py
src/evrard/: CMakeLists.txt  EvrardCollapseFileWriter.hpp  EvrardCollapseInputFileReader.hpp  evrard.cpp  evrard_data_file_reader.hpp  evrard_data_file_writer.hpp  evrard_new.cpp  evrard_reader.hpp
src/evrard-sfc/: evrard-sfc.cpp
src/include/: .Octree.hpp.swp  ArgParser.hpp  BBox.hpp  BuildTree.hpp  Density.hpp  DistributedDomain.hpp  Domain.hpp  Energy.hpp  EnergyConservation.hpp  EquationOfState.hpp  EquationOfStateSqPatch.hpp  FindNeighbors.hpp  LambdaTask.hpp  LambdaTaskLoop.hpp  Momentum.hpp  MomentumEnergy.hpp  MomentumEnergySqPatch.hpp  Octree.hpp  ParticlesData.hpp  Printer.hpp  SmoothingLength.hpp  Task.hpp  TaskLoop.hpp  Timestep.hpp  UpdateQuantities.hpp  Workflow.hpp  common.hpp  config.hpp  cudaFunctionAnnotation.hpp  kernels.hpp  math.hpp  mytimer.hpp  sphexa.hpp  timer.hpp  utils.hpp
src/init/: factory.hpp  file_init.hpp  isim_init.hpp  noh_constants.hpp  noh_init.hpp  sedov_constants.hpp  sedov_init.hpp
src/io/: ifile_writer.hpp  mpi_file_utils.hpp
src/noh/: CMakeLists.txt  NohAnalyticalSolution.hpp  NohDataFileWriter.hpp  NohDataGenerator.hpp  noh.cpp  noh_data_file_reader.hpp  noh_data_file_writer.hpp  noh_data_generator.hpp
src/sedov/: CMakeLists.txt  SedovAnalyticalSolution.hpp  SedovDataFileWriter.hpp  SedovDataGenerator.hpp  sedov-sfc.cpp  sedov.cpp  sedov_data_file_reader.hpp  sedov_data_file_writer.hpp  sedov_generator.hpp
src/sedov-sfc/: CMakeLists.txt  SedovDataFileWriter.hpp  sedov-sfc.cpp
src/sphexa/: sphexa.cpp
src/sqpatch/: SqPatchDataGenerator.hpp  SqPatchFileWriter.hpp  sqpatch.cpp
src/tests/: Makefile  evrard.cpp  sqpatch.cpp  tiny-test.cpp  treeTest.cpp
src/tree/: BroadTree.hpp  HTree.hpp  KdTree.hpp  Octree.hpp  nanoflann.hpp
src/windblob/: WindblobDataGenerator.hpp  WindblobFileWriter.hpp  windblob.cpp
test/integration_mpi/: CMakeLists.txt  box_mpi.cpp  domain_2ranks.cpp  domain_focus_prototype.cpp  domain_nranks.cpp  exchange.cpp  exchange_domain.cpp  exchange_focus.cpp  exchange_halos.cpp  exchangeparticles.cpp  focus_domain.cpp  focus_exchange.cpp  focus_tree.cpp  globaloctree.cpp  gtest-mpi-listener.hpp  haloexchange.cpp  test_main.cpp  treedomain.cpp
test/performance/: CMakeLists.txt  btreetraversal.cu  findneighbors.cu  findneighbors.cuh  gather_driver.cpp  neighbor_driver.cpp  octree.cpp  octree.cu  peers.cpp  scan.cpp
test/unit/: CMakeLists.txt  boxoverlap.cpp  btree.cpp  btreetraversal.cpp  clz.cpp  collisions_cpu.cpp  disjointoctree.cpp  domaindecomp.cpp  findneighbors.cpp  halodiscovery.cpp  haloneighbors.cpp  histogram.cpp  init_cache.cmake  layout.cpp  morton.cpp  octree.cpp  octree_internal.cpp  octree_util.cpp  sfc_tests.cpp  test_main.cpp  test_sync.cpp  zorder.cpp
(+2074 files in other folders)
